2004-01-20  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNode.cs : When adding a node to child list, it should reject its
	  ancestors. Patch by Boris Kirzner.
	* XmlNodeReader.cs : Related fix to the fix above. It should not move
	  to children of XmlEntityReference nodes.
	* XmlTextWriter.cs : FixedWriteStartElement() not to write default
	  namespace when ns is null (while ns is "", it writes default ns).
	* XmlElement.cs : Fixed WriteTo() to call WriteStartElement(localName)
	  when NamespaceURI is an empty string.

2004-01-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttribute.cs : when set a value, it is no longer default 
	  (even if the value is the same as default value).
	* XmlAttributeCollection.cs : Remove() should recover default attribute
	  value to default, not specified value.
	  Patch by Boris Kirzner (modified a bit)
	* XmlDocument.cs : Reference to undeclared entity is not allowed in
	  Load(), while allowed in ReadNode(). Added such distinguishing logic.

2004-01-13  Atsushi Enomoto <atsushi@ximian.com>

	* XmlValidatingReader.cs : Throw exception only in case of errors.
	  Added NET_1_2 Evidences property.

2004-01-12  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlElement.cs : Fixed .ctor(). Default attribute was not treated as
	  Specified = false. Patch by Boris Kirzner.

2004-01-11  Atsushi Enomoto <atsushi@ximian.com>

	* XmlException.cs : Fixed incorrect .ctor signature.
	* XmlParserInput.cs : Fixed in sync with the above fix.

2004-01-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlAttribute.cs, XmlElement.cs : 
	  Fixed incorrect protected .ctor modification.

2004-01-08  Nick Drochak <ndrochak@ieee.org>

	* DTDValidatingReader.cs: Removed unused variable
	
2004-01-07  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlNamespaceManager.cs : Implemented .NET 1.2 methods that take
	  atomizedNames argument.
	* XmlTextReader.cs : Use new namespace manager methods.
	  Reduced NameTable.Add().