@@ -358,10 +358,11 @@ namespace System.Xml
 
 		public override void WriteTo (XmlWriter w)
 		{
-			if (NamespaceURI == String.Empty)
-				w.WriteStartElement (LocalName);
-			else
-				w.WriteStartElement (Prefix, LocalName, NamespaceURI);
+			// FIXME: This breaks XmlElementTests.WriteToMakesNonsenseForDefaultNSChildren()
+//			if (NamespaceURI == String.Empty)
+//				w.WriteStartElement (LocalName);
+//			else
+				w.WriteStartElement (NamespaceURI == null || NamespaceURI.Length == 0 ? String.Empty : Prefix, LocalName, NamespaceURI);
 
 			foreach(XmlAttribute attributeNode in Attributes)
 				if (attributeNode.Specified)
